--- a/moviemanager_frontend/moviemanager/src/app/app.component.html
+++ b/moviemanager_frontend/moviemanager/src/app/app.component.html
@@ -1,7 +1,4 @@
-<div class="menu">
-    <a routerLink="/movies">Go to Movies</a>
-    <a routerLink="/directors">Go to Directors</a>
-    <a routerLink="/actors">Go to Actors</a>
+<div class="main">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
 </div>
-
-<router-outlet></router-outlet>
