--- a/moviemanager_frontend/moviemanager/src/app/directors/directors.component.html
+++ b/moviemanager_frontend/moviemanager/src/app/directors/directors.component.html
@@ -1,5 +1,7 @@
-<div *ngFor="let director of directors">
-    <a [routerLink]="['/directors', director.id]">
-        <div>{{director.firstName}} {{director.lastName}}</div>
-    </a>
+<div class="container">
+    <div *ngFor="let director of directors">
+        <a [routerLink]="['/directors', director.id]">
+            <div>{{director.firstName}} {{director.lastName}}</div>
+        </a>
+    </div>
 </div>
