--- a/moviemanager_frontend/moviemanager/src/app/movies/movie/movie.component.scss
+++ b/moviemanager_frontend/moviemanager/src/app/movies/movie/movie.component.scss
@@ -1,11 +1,55 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1rem;
+
+    background-color: rgb(204, 204, 204);
+    height: 100%;
+    font-size: 2rem;
+}
+
+
 .movie {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
-    gap: .3rem;
+    gap: 2rem;
 
-    .description {
-        font-style: italic;
+    background-color: rgb(41, 40, 40);
+    color: white;
+
+
+    margin-top: 3rem;
+    width: 50%;
+    padding: .6rem;
+
+    .summary {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        padding: 1rem;
+
+
+        .description {
+            font-style: italic;
+        }
     }
+
+    .director {
+        display: flex;
+        gap: 1rem;
+    }
+
+    .actors {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+    }
+
 }
