--- a/moviemanager_frontend/moviemanager/src/app/movies/movies.component.html
+++ b/moviemanager_frontend/moviemanager/src/app/movies/movies.component.html
@@ -1,5 +1,7 @@
-<div *ngFor="let movie of movies">
-    <a [routerLink]="['/movies', movie.id]">
-        <div class="title">{{movie.title}}</div>
-    </a>
+<div class="container">
+    <div *ngFor="let movie of movies">
+        <a [routerLink]="['/movies', movie.id]">
+            <div class="title">{{movie.title}}</div>
+        </a>
+    </div>
 </div>
