--- a/moviemanager_frontend/moviemanager/src/app/movies/movie/movie.component.scss
+++ b/moviemanager_frontend/moviemanager/src/app/movies/movie/movie.component.scss
@@ -44,30 +44,35 @@
         gap: 1rem;
     }
 
-    .actors {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 1rem;
 
-        .actor {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 1rem;
 
-            .deleteButton {
-                color: red;
-                font-size: 1.2rem;
-            }
+}
 
-            .deleteButton:hover {
-                cursor: pointer;
-                color: rgb(117, 3, 3);
-                transform: scale(1.1);
-            }
-        }
+.actors {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+
+
+}
+
+.actor,
+.director {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+
+    .deleteButton {
+        color: red;
+        font-size: 1.2rem;
     }
 
+    .deleteButton:hover {
+        cursor: pointer;
+        color: rgb(117, 3, 3);
+        transform: scale(1.1);
+    }
 }
