--- a/moviemanager_frontend/moviemanager/src/app/directors/director/director.component.html
+++ b/moviemanager_frontend/moviemanager/src/app/directors/director/director.component.html
@@ -17,15 +17,37 @@
             <div>Movies:</div>
             <ul>
 
-                <li *ngFor="let movie of director?.movies">
+                <li *ngFor="let movie of director?.movies" class="movie">
                     <a [routerLink]="['/movies', movie.id]">
                         <div class="title">{{movie?.title}} ({{movie.productionYear}})</div>
                     </a>
-
+                    <div (click)="deleteMovie(movie.id)" class="deleteButton"> X </div>
                 </li>
             </ul>
+
+            <form (ngSubmit)="addMovie()">
+                <mat-form-field>
+                    <mat-label>Add Movie</mat-label>
+                    <mat-select [(ngModel)]="selectedMovieId" name="movie">
+                        <mat-option *ngFor="let movie of movies" [value]="movie.id">{{movie.title}}
+                            ({{movie.productionYear}})</mat-option>
+
+                    </mat-select>
+                </mat-form-field>
+                <button mat-raised-button color="primary" type="submit">Add</button>
+            </form>
+
+
         </div>
+
+
+
+
     </div>
+
+
+
+
 
 
 </div>
