--- a/moviemanager_frontend/moviemanager/src/app/list.scss
+++ b/moviemanager_frontend/moviemanager/src/app/list.scss
@@ -11,3 +11,21 @@
     font-size: 2rem;
 
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    padding: 1rem;
+    border-radius: 10px;
+    width: 100%;
+    background-color: rgb(41, 40, 40);
+
+    .text {
+        color: white;
+        padding: .5rem;
+        font-size: 1.7rem
+    }
+}
