--- a/moviemanager_frontend/moviemanager/src/app/movies/movies.component.scss
+++ b/moviemanager_frontend/moviemanager/src/app/movies/movies.component.scss
@@ -1,22 +1,1 @@
-.add-movie {
-
-
-    form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        padding: 1rem;
-        border-radius: 10px;
-        width: 100%;
-        background-color: rgb(41, 40, 40);
-
-        .text {
-            color: white;
-            padding: .5rem;
-            font-size: 1.7rem
-        }
-    }
-
-}
+.add-movie {}
