--- a/moviemanager_frontend/moviemanager/src/app/actors/actor/actor.component.html
+++ b/moviemanager_frontend/moviemanager/src/app/actors/actor/actor.component.html
@@ -7,6 +7,7 @@
             <div class="name">
                 <div class="firstName">{{actor?.firstName}}</div>
                 <div class="lastName">{{actor?.lastName}} ({{getAge()}})</div>
+                <div class="delete-entity-button" (click)="deleteActor()">delete</div>
             </div>
 
 
