--- a/moviemanager_frontend/moviemanager/src/app/person.scss
+++ b/moviemanager_frontend/moviemanager/src/app/person.scss
@@ -52,3 +52,26 @@
         font-weight: 600;
     }
 }
+
+.name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.delete-entity-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 1rem;
+    background-color: rgb(219, 56, 56);
+    padding: .3rem;
+    border-radius: 10px;
+}
+
+.delete-entity-button:hover {
+    cursor: pointer;
+    background-color: rgb(239, 32, 32);
+    transform: scale(1.05);
+}
