fix removing Director

--- a/moviemanager_frontend/moviemanager/src/app/directors/director/director.component.html
+++ b/moviemanager_frontend/moviemanager/src/app/directors/director/director.component.html
@@ -6,6 +6,7 @@
             <div class="name">
                 <div class="firstName">{{director?.firstName}} </div>
                 <div class="lastName">{{director?.lastName}} ({{getAge()}})</div>
+                <div class="delete-entity-button" (click)="deleteDirector()">delete</div>
             </div>
 
 
