--- a/moviemanager_frontend/moviemanager/src/app/movies/movie/movie.component.scss
+++ b/moviemanager_frontend/moviemanager/src/app/movies/movie/movie.component.scss
@@ -76,3 +76,28 @@
         transform: scale(1.1);
     }
 }
+
+
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+}
+
+.delete-movie-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 1rem;
+    background-color: rgb(219, 56, 56);
+    padding: .3rem;
+    border-radius: 10px;
+}
+
+.delete-movie-button:hover {
+    cursor: pointer;
+    background-color: rgb(239, 32, 32);
+    transform: scale(1.05);
+}
