add displaying movies by category

--- a/moviemanager_frontend/moviemanager/src/app/header/header.component.html
+++ b/moviemanager_frontend/moviemanager/src/app/header/header.component.html
@@ -4,5 +4,6 @@
         <a routerLink="/movies">Movies</a>
         <a routerLink="/directors">Directors</a>
         <a routerLink="/actors">Actors</a>
+        <a routerLink="/categories">Categories</a>
     </div>
 </div>
