--- a/moviemanager_frontend/moviemanager/src/app/movies/movie/movie.component.html
+++ b/moviemanager_frontend/moviemanager/src/app/movies/movie/movie.component.html
@@ -6,9 +6,27 @@
                 <div>{{movie?.title}} ({{movie?.productionYear}})</div>
                 <div class="delete-movie-button" (click)="deleteMovie()">delete</div>
             </div>
+
+
+
+
+            <form (ngSubmit)="addCategory()" *ngIf="!category">
+                <mat-form-field>
+                    <mat-select [(ngModel)]="selectedCategoryId" name="catgeory">
+                        <mat-option *ngFor="let category of categories" [value]="category.id">
+                            {{category.name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <button mat-raised-button color="primary" type="submit">Add</button>
+            </form>
+
+            <mat-chip *ngIf="category" (click)="removeCategory()">
+                {{category?.name}}
+            </mat-chip>
+
             <div><!-- {{movie.category}} --></div>
             <div class="description">{{movie?.description}}</div>
-
         </div>
 
 
